<resources>
    <string name="app_name">Era</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="please_sign_up_with_your_information">Please Sign-up With Your Information</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="havens">Havens</string>
    <string name="brunch_menu">Brunch Menu</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_login_with_your_information">Please Login With Your Information</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="i_forgot_my_password">I Forgot My Password</string>
    <string name="login">Login</string>
    <string name="are_you_a_new_user_register">Are You A New User Register</string>
</resources>