<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/back_icon"
        app:title="Login"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-20dp"
        android:backgroundTint="#E6EDDD">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="455dp"
            android:orientation="vertical"
            android:padding="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="#035106"
                android:textSize="30sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_login_with_your_information"
                android:alpha="1.1"
                android:textStyle="italic"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textStyle="italic"/>

            <EditText
                android:layout_width="362dp"
                android:layout_height="48dp"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"
                android:hint="Eradinehavens@gmail.com"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="italic"/>

            <EditText
                android:layout_width="362dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="frgFChb@86d"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_forgot_my_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="300sp"
                android:layout_height="50dp"
                android:text="@string/login"
                android:background="@drawable/search"
                android:layout_marginStart="35dp"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="italic"
                app:cornerRadius="35dp" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:text="@string/are_you_a_new_user_register"
                android:textAlignment="center" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>